--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <h2>Sabores de Verão 2025 (Edição Limitada)</h2>
     <div class="flavors-grid">
       <div class="flavor-card">
-        <img src="https://via.placeholder.com/250x150.png?text=Maracujá+com+Hortelã" alt="Gelado de Maracujá com Hortelã">
+        <img src="Maracujá com hortelã.png" alt="Gelado de Maracujá com Hortelã">
         <p>Maracujá com Hortelã</p>
         <span class="limited-edition">Edição Limitada</span>
       </div>
