--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
     <p>Subscreve a nossa newsletter:</p>
     <input type="email" placeholder="O teu email">
     <div class="social-buttons">
-      <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.instagram.com/geladosantini?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="https://tiktok.com" target="_blank"><i class="fab fa-tiktok"></i></a>
       <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
     </div>
